# gargoyle

./: .gitignore  AGENTS.md  Gargoyle.sln  Gargoyle.vcxproj  Gargoyle.vcxproj.filters  README.md  justfile  main.cpp  mkdocs.yml  pyproject.toml  setup.nasm
.agent/: PLANS.md
.github/workflows/: ci.yml
GargoyleArm64/: GargoyleArm64.vcxproj  GargoyleArm64.vcxproj.filters  arm_runtime.hpp  main_arm64.cpp  reentry_arm64.asm  setup_arm64.asm
GargoyleArm64EC/: GargoyleArm64EC.vcxproj  GargoyleArm64EC.vcxproj.filters  main_arm64ec.cpp  reentry_arm64ec.asm  setup_arm64ec.asm
GargoyleX64/: GargoyleX64.vcxproj  GargoyleX64.vcxproj.filters  README.md  main_x64.cpp  reentry_x64.nasm  setup_x64.nasm
docs/: acceptance.md  api.md  future-work.md  index.md  lab-setup.md  quickstart.md  references.md  responsible-use.md  validation-checklist.md  win32-architecture.md  x64-architecture.md
docs/architectures/: arm64-sibling.md  arm64ec-sibling.md  comparison.md  win32-original.md  x64-sibling.md
docs/concepts/: rop-stack-pivoting-pic.md  temporal-memory-state.md  timer-apc-sleepex.md  windows-primitives.md
docs/contributing/: docs-style.md  maintainer-guide.md
docs/implementation/: acceptance-harness.md  assembly-pic.md  build-system.md  cpp-harnesses.md  tests-and-ci.md
docs/research/: context.md  lineage.md  references.md
docs/validation/: headless-artifacts-architecture.md  limitations.md  live-messagebox.md  overview.md
src/gargoyle_acceptance/: __init__.py  architecture.py  build.py  cli.py  environment.py  errors.py  harness.py  pe.py  windows.py
tests/: test_architecture.py  test_build.py  test_cli.py  test_environment.py  test_errors.py  test_harness.py  test_pe.py
